# ELO-ECM-Suite

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.test.ts  app.ts  index.ts  store.ts
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/src/: main.rs
apps/desktop/src/commands/: dialog.rs  fs.rs  mod.rs  notify.rs  sidecar.rs  tray.rs
apps/ui/: index.html  package.json  tsconfig.tsbuildinfo
apps/ui/src/: App.tsx
apps/ui/src/api/: ecmApi.ts
apps/ui/src/components/explorer/: BreadcrumbBar.tsx  ContentPanel.tsx  DetailPanel.tsx  ExplorerLayout.tsx  GlobalSearchOverlay.tsx  MenuBar.tsx  StatusBar.tsx  TabBar.tsx  ToolBar.tsx  TreePanel.tsx
apps/ui/src/ipc/: tauriCommands.ts
apps/ui/src/pages/: ExplorerPage.tsx
apps/ui/src/stores/: explorerStore.ts
apps/ui/src/styles/: app.css
apps/ui/src/utils/: formatters.test.ts  formatters.ts
docs/: implementation-plan.md
